# fcitx5-FanIME

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  lcompile.sh
assets/: word.txt
po/: CMakeLists.txt  fcitx5-fanime.pot
scripts/: lcompile-debug.sh  lcompile-release.sh  lcompile.sh  llaunch.sh
src/: CMakeLists.txt  dict.cpp  dict.h  fanime-addon.conf.in.in  fanime.conf.in  fanime.cpp  fanime.h  global.h  log.cpp  log.h  pinyin_utils.cpp  pinyin_utils.h  utils.cpp  utils.h
